<resources>
    <string name="app_name">CoinWatch</string>
    <string name="positive_percentage">+%1$.2f%%</string>
    <string name="negative_percentage">%1$.2f%%</string>
    <string name="coin_price_change">%1$.2f%%</string>
    <string name="currency_format_decimal">$%1$.2f</string>
    <string name="currency_format_integer">$%1$d</string>
    <string name="cd_top_bar_back">Back</string>
    <string name="cd_coin_image">Coin image</string>
    <string name="card_header_market_stats">Market Stats</string>
    <string name="list_header_historic_data">Historic Data</string>
    <string name="list_item_market_cap_rank">Market Cap Rank</string>
    <string name="list_item_market_cap">Market Cap</string>
    <string name="list_item_circulating_supply">Circulating Supply</string>
    <string name="list_item_atl">All Time Low</string>
    <string name="list_item_ath">All Time High</string>
    <string name="list_item_atl_date">All Time Low Date</string>
    <string name="list_item_ath_date">All Time High Date</string>
    <string name="period_high">Period High</string>
    <string name="period_low">Period Low</string>
    <string name="subtitle_period_low">Period Low</string>
    <string name="subtitle_period_high">Period High</string>
    <string name="top_app_bar_title_market">Market</string>
    <string name="period_short_name_day">1D</string>
    <string name="period_short_name_week">1W</string>
    <string name="period_short_name_month">1M</string>
    <string name="period_short_name_six_month">6M</string>
    <string name="period_short_name_year">1Y</string>
    <string name="period_short_name_max">Max</string>
    <string name="period_long_name_day">Past day</string>
    <string name="period_long_name_week">Past week</string>
    <string name="period_long_name_month">Past month</string>
    <string name="period_long_name_year">Past year</string>
    <string name="period_long_name_max">All time</string>
    <string name="range_title_low">Low</string>
    <string name="range_title_high">High</string>
    <string name="title_chart_range">Chart Range</string>
    <string name="header_favourites">Favourites</string>
    <string name="header_coins">Coins</string>
    <string name="market_up">Market is up</string>
    <string name="market_down">Market is down</string>
    <string name="powered_by">Powered by</string>
    <string name="good_morning">Good morning</string>
    <string name="good_afternoon">Good afternoon</string>
    <string name="good_evening">Good evening</string>
    <string name="cd_top_bar_favourite">Favourite</string>
    <string name="button_retry">Retry</string>
    <string name="error_occurred">An error has occurred</string>
    <string name="empty_state_favourite_coins_title">No favourite coins</string>
    <string name="empty_state_favourite_coins_subtitle_start">Tap the</string>
    <string name="empty_state_favourite_coins_subtitle_end">to favourite a coin</string>
    <string name="empty_state_coins_title">No coins</string>
    <string name="empty_state_coins_subtitle">Please try again later</string>
    <string name="list_item_volume_24h">Volume 24h</string>
    <string name="list_item_max_supply">Max Supply</string>
    <string name="list_item_listed_date">Listed Date</string>
    <string name="period_short_name_hour">1H</string>
    <string name="period_long_name_hour">Past hour</string>
    <string name="period_short_name_three_month">3M</string>
    <string name="period_long_name_three_month">Past 3 months</string>
    <string name="period_short_name_five_year">5Y</string>
    <string name="period_long_name_five_year">Past 5 years</string>
</resources>
