...
            marketStats = MarketStats(
                marketCapChangePercentage24h = Percentage(BigDecimal("-0.23"))
            ),
            timeOfDay = TimeOfDay.Evening
        ),
        CoinListUiState.Loading,
        CoinListUiState.Error("Error message")
    )
}

